Amazon: Added -webkit-text-size-adjust. Fixes #214.
The text in the details becomes too big on iOS devices. Adding -webkit-text-size-adjust: 100% seems to fix that.

--- a/share/spice/amazon/amazon.css
+++ b/share/spice/amazon/amazon.css
@@ -31,6 +31,7 @@
 }
 
 #spice_amazon .description {
+    -webkit-text-size-adjust: 100%;
     float: left;
     width: 450px;
     margin-left: 20px;
